# OpenCV-3-Projects-for-Photo-Filtering

./: README.md
9781787289055_Code/Codes/Code files_Section 1/src/: CMakeLists.txt  loading_images.1.cpp  loading_images.2.cpp
9781787289055_Code/Codes/Codes_Section 2/: loading_images.0.cpp
9781787289055_Code/Codes/Codes_Section 3/: CMakeLists.txt  minify.1.cpp  minify.2.cpp  minify.3.cpp  minify.4.cpp
9781787289055_Code/Codes/Codes_Section 4/src/: CMakeLists.txt  ambiance.1.cpp  ambiance.2.cpp  ambiance.3.cpp  load.vid.cpp
